# schatter

./: Cargo.toml  Makefile  README.md  justfile  points.csv  provison-rasp-pi.sh
schatter-client/: Cargo.toml
schatter-client/src/: lib.rs  main.rs
schatter-lib/: Cargo.toml
schatter-server/: Cargo.toml
schatter-server/src/: camera_wrapper.rs  collision_detector.rs  main.rs  monolith.rs  motion_tracker.rs
shaders/: fs.wgsl
