[package]
name = "schatter-client"
version = "0.1.0"
edition = "2021"

[dependencies]
nannou_osc = "0.18.0"
smart-leds = "0.3.0"
termion = "1.5.6"
colored = "2.0"
rand = "0.8.3"

[target.'cfg(any(target_arch = "arm", target_arch = "aarch64"))'.dependencies]
ws281x-rpi = { path = "./../../ws281x-rpi/" }

[package.metadata.cross.target.armv7-unknown-linux-gnueabihf]
pre-build = ["apt-get update && apt-get install --assume-yes libclang-dev clang"]

[package.metadata.cross.target.aarch64-unknown-linux-gnu]
pre-build = ["apt-get update && apt-get install --assume-yes libclang-dev clang"]
